Fix imgstack img stretching

--- a/__src/assets/scss/layout/_post.scss
+++ b/__src/assets/scss/layout/_post.scss
@@ -66,6 +66,7 @@ $stack: "stack";
 
     &__item {
       margin-bottom: 2%;
+      align-self: center;
 
       .#{stack}--two & {
         width: 49%;
